[package]
name = "mi_rust_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib"]


[dependencies]
jni = "0.21.1"
hex = "0.4"
sha2 = "0.10.8"
x25519-dalek = "1.0.0"
aes = { version = "0.8.3", features = ["zeroize"] }
cbc = { version = "0.1.2", features = ["std", "zeroize"] }
rand = "0.8"

[dev-dependencies]
hex-literal = "0.4.1"